--- a/src/components/Grid.astro
+++ b/src/components/Grid.astro
@@ -2,7 +2,7 @@
 
 ---
 
-<div class="grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-16 xl:gap-32">
+<div class="grid grid-cols-1 lg:grid-cols-3 gap-8 lg:gap-12">
 	<Fragment>
 		<slot name="grid-content-1" />
 	</Fragment>
